replace round length with turn length
still keep zombie rounds off (it will be complicated to implement them)
