# api/src/tsoa/swagger.json
@@ -71,14 +71,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"play_time_per_player": {
-						"type": "number",
-						"format": "double"
-					},
 					"practice": {
 						"type": "boolean"
 					},
-					"round_length": {
+					"turn_length": {
 						"type": "number",
 						"format": "double"
 					}
@@ -97,9 +93,8 @@
 					"lobby_state",
 					"max_players",
 					"num_of_rounds",
-					"play_time_per_player",
 					"practice",
-					"round_length"
+					"turn_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -177,14 +172,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"play_time_per_player": {
-						"type": "number",
-						"format": "double"
-					},
 					"practice": {
 						"type": "boolean"
 					},
-					"round_length": {
+					"turn_length": {
 						"type": "number",
 						"format": "double"
 					}
@@ -203,9 +194,8 @@
 					"lobby_state",
 					"max_players",
 					"num_of_rounds",
-					"play_time_per_player",
 					"practice",
-					"round_length"
+					"turn_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -281,14 +271,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"play_time_per_player": {
-						"type": "number",
-						"format": "double"
-					},
 					"practice": {
 						"type": "boolean"
 					},
-					"round_length": {
+					"turn_length": {
 						"type": "number",
 						"format": "double"
 					}
@@ -307,9 +293,8 @@
 					"lobby_state",
 					"max_players",
 					"num_of_rounds",
-					"play_time_per_player",
 					"practice",
-					"round_length"
+					"turn_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -387,14 +372,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"play_time_per_player": {
-						"type": "number",
-						"format": "double"
-					},
 					"practice": {
 						"type": "boolean"
 					},
-					"round_length": {
+					"turn_length": {
 						"type": "number",
 						"format": "double"
 					}
@@ -413,9 +394,8 @@
 					"lobby_state",
 					"max_players",
 					"num_of_rounds",
-					"play_time_per_player",
 					"practice",
-					"round_length"
+					"turn_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -476,14 +456,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"play_time_per_player": {
-						"type": "number",
-						"format": "double"
-					},
 					"practice": {
 						"type": "boolean"
 					},
-					"round_length": {
+					"turn_length": {
 						"type": "number",
 						"format": "double"
 					}
@@ -502,9 +478,8 @@
 					"lobby_state",
 					"max_players",
 					"num_of_rounds",
-					"play_time_per_player",
 					"practice",
-					"round_length"
+					"turn_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -868,52 +843,6 @@
 			}
 		},
 		"/round_executor": {
-			"get": {
-				"operationId": "Get",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Response"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "lobbyID",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "matchWithinLobby",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "roundWithinMatch",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/round_status": {
 			"get": {
 				"operationId": "Get",
 				"responses": {
